# bitwarden_rofi

./: Cargo.toml  LICENSE  README.md  shell.nix
src/: app.rs  bitwarden.rs  cache.rs  item.rs  lib.rs  main.rs  provider.rs  providers.rs  rofi.rs
src/providers/: bitwarden.rs  keyhub.rs  password_store.rs  terraform.rs
src/providers/bitwarden/: provider.rs  session.rs
