[package]
name = "bitwarden_rofi"
version = "0.1.0"
authors = ["Jos van Bakel <jos@codeaddict.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyring = "0.9.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rustofi = "0.2.2"
chrono = {version = "0.4.15", features = ["serde"]}